--- a/V21/content/theorie.tex
+++ b/V21/content/theorie.tex
@@ -1,7 +1,43 @@
 \section{Theorie}
 \label{sec:Theorie}
 
-\cite{sample}
+Ziel dieses Versuches ist die Bestimmung der Kernspins $I$ der Rubidium-Isotope $\ce{^{85}Rb}$ und $\ce{^{87}Rb}$
+mithilfe der Methode des optischen Pumpens.
+
+\subsection{Spin-Bahn-Kopplung und magnetische Momente der Elektronenhülle}
+
+Neben den anderen Alkalimetallen Lithium, Natrium, Kalium, Cäsium und Francium der ersten Hauptgruppe der Elemente,
+besitzt auch Rubidium genau ein Elektron in seiner Valenzschale.
+Der Gesamtdrehimpuls $\vec{J}$ dieses Elektrons ergibt sich über die Kopplung des Spins $\vec{S}$ und des Bahndrehimpulses
+$\vec{L}$ zu
+
+\begin{equation}
+    \vec{J} = \vec{S} + \vec{L} \; .
+\end{equation}
+
+Diesen Drehimpulsen, können aufgrund der Kreisbewegungen der elektrischen Ladung die magnetischen Momente
+
+\begin{align}
+    \vec{\mu_J} &= - g_J \mu_\text{B} \vec{J}, \; \; |\vec{\mu_J}| = g_J \mu_\text{B} \sqrt{J(J+1)} \\
+    \vec{\mu_S} &= - g_S \mu_\text{B} \vec{S}, \; \; |\vec{\mu_S}| = g_S \mu_\text{B} \sqrt{S(S+1)} \\
+    \vec{\mu_L} &= - \mu_\text{B} \vec{L}, \; \; |\vec{\mu_L}| = \mu_\text{B} \sqrt{L(L+1)}
+\end{align}
+
+zugeordnet werden. Hierbei beschreibt $g_J$ den Land\'{e}-Faktor, $g_S\approx 2$ den anormalen Spin-g-Faktor, 
+$\mu_\text{B} = \frac{e \hbar}{2 m_\text{e}}$ das
+Bohrsche Magneton und $J$, $S$, $L$ die Quantenzahlen der jeweiligen Drehimpulse.
+
+Aus der Addition der magnetischen Momente
+
+\begin{equation}
+    \vec{\mu_J} = \vec{\mu_S} + \vec{\mu_L}
+\end{equation}
+
+ergibt sich der Land\'{e}-Faktor zu
+
+\begin{equation}
+    g_J = \frac{(g_S + 1)J(J+1)+(g_S - 1)[S(S+1)-L(L+1)]}{2J(J+1)} \; .
+\end{equation}
 
 \begin{equation}
     B = \mu_0 \frac{8IN}{\sqrt{125}R}\,.
