--- a/V47/content/theorie.tex
+++ b/V47/content/theorie.tex
@@ -25,7 +25,7 @@ Nach dem 1. Hauptsatz der Thermodynamik
  \text{d}Q = \text{d}U - \text{d}W = \text{d}U + p\text{d}V
 \end{equation}
 
-ergeben sich die Wärmekapazitäten bei konstantem Druck $C_p$ und konstantem Volumen $C_V$ zu 
+ergeben sich die Wärmekapazitäten $C_p$ bei konstantem Druck und $C_V$ bei konstantem Volumen zu 
 
 \begin{align}
     C_p &= \left. \frac{\partial Q}{\partial T}\right|_p = \left. \frac{\partial U}{\partial T}\right|_p \\
@@ -47,7 +47,7 @@ zu $T^3$ ab.
 
 \subsection{Quantenmechanische Betrachtung}
 
-Unter quantenmechanischer Betrachtung [?] ergibt sich die mittlere Freie Energie $\bigl<U\bigr>$ mit diskreten
+Unter quantenmechanischer Betrachtung ergibt sich die mittlere Freie Energie $\bigl<U\bigr>$ mit diskreten
 Oszillationsenergien $E_n = \hbar \omega \left(n + \sfrac{1}{2}\right)$ als
 
 \begin{equation}
@@ -125,7 +125,7 @@ mit der materialspezifischen Debyetemperatur
 
 Durch diese sind die auftretenden Phononenfrequenzen aufgezeigt und sie teilt den Temperaturbereich der klassischen ($T > \theta_\text{D}$)
 von dem der quantenmechanischen Beschreibung ($T < \theta_\text{D}$).
-Für die Zustandssumme $Z(\omega)$ gilt die Bedingung [?]:
+Für die Zustandssumme $Z(\omega)$ gilt die Bedingung [1]:
 
 \begin{equation}
     \label{eqn:Natome}
