--- a/V47/header.tex
+++ b/V47/header.tex
@@ -134,7 +134,7 @@
   Sara Krieg\\%
   \href{mailto:sara.krieg@udo.edu}{sara.krieg@udo.edu}%
   \texorpdfstring{\and}{,}%
-  Marek KArzel\\%
+  Marek Karzel\\%
   \href{mailto:marek.karzel@udo.edu}{marek.karzel@udo.edu}%
 }
 \publishers{TU Dortmund – Fakultät Physik}
