--- a/V21/content/diskussion.tex
+++ b/V21/content/diskussion.tex
@@ -1,2 +1,45 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+Für die Ermittlung der vertikalen Erdmagnetfelds ergibt sich durch die Errechnung aus dem Kompensationsfeld durch die vertikale Spule
+mit Hilfe der Helmholtzgleichung ein Wert von $\SI{35.09}{\micro\tesla}$. Aus der linearen Ausgleichsrechnung ergibt 
+sich hingegen ein Wert von $\num{25.5\pm 1.2}\si{\micro\tesla}$. \\
+Ein Literaturwert für diesen Wert liegt bei etwa $\SI{22}{\micro\tesla}$. Die Abweichung kann durch Messungenauigkeiten erklärt werden. Der 
+ermittelte Wert ist demnach gut. \\
+Die Landefaktoren werden zu
+
+\begin{align*}
+    g_\text{F1} &= \num{0.519\pm 0.008},\\
+    g_\text{F2} &= \num{0.336\pm 0.002}.
+\end{align*}
+
+bestimmt. Literaturwerte liegen bei 
+
+\begin{align*}
+    g_\text{F1} &= \num{0.5},\\
+    g_\text{F2} &= \frac{1}{3}.
+\end{align*}
+
+Die Resonanz 1 kann damit dem Isotop $^{87}\text{Rb}$ und die Resonanz 2 dem Isotop $^{85}\text{Rb}$ zugeordnet werden. Die 
+relativen Abweichungen sind dabei im Rahmen von $\SI{2}{\percent}$.\\
+Die Kernspins werden zu 
+
+\begin{align*}
+    I_1 &= \num{1.416\pm 0.030}\,,\\
+    I_2 &= \num{2.477\pm 0.019}\,,
+  \end{align*}
+
+bestimmt. Die theoretischen Kernspins liegen bei
+
+\begin{align*}
+    I_1 &= \num{1.5}\,,\\
+    I_2 &= \num{2.5}\,.
+\end{align*}
+
+Das relative Isotopenverhältnis ergibt sich zu $\num{0.4}$. Das in der Natur vorkommende Verhältnis liegt bei $\num{0.386}$. Demnach ist 
+das gemessene Verhältnis sehr nahe an dem natürlichen, obwohl das Rubidium-Gasgemisch angereichert ist. Das Ablesen der Minima am Osilloskop 
+kann fehlerbehaftet sein und ist recht ungenau. \\
+Die Betrachtung des quadratischen Zeeman-Effektes, der um drei beziehungsweise 26
+Größenordnungen geringer ist als der lineare, zeigt, dass die getroffenen Näherungen
+hinreichend sind.
+
