--- a/V21/content/theorie.tex
+++ b/V21/content/theorie.tex
@@ -39,7 +39,33 @@ ergibt sich der Land\'{e}-Faktor zu
     g_J = \frac{(g_S + 1)J(J+1)+(g_S - 1)[S(S+1)-L(L+1)]}{2J(J+1)} \; .
 \end{equation}
 
+\subsection{Gesamtdrehimpuls des Atoms}
+\subsection{Der Zeeman-Effekt}
+
+\begin{equation}
+    g_\text{F}\approx g_\text{J}\frac{F\left(F+1\right)+J\left(J+1\right)-I\left(I+1\right)}{2F\left(F+1\right)}
+    \label{eqn:lande}
+\end{equation}
+
+\subsection{Optisches Pumpen}
+\subsection{Messung der Zeeman-Aufspaltung}
+
+\begin{equation*}
+    B_\text{ind.Em.} = \frac{hf}{g_\text{F}\mu_\text{B}} = \frac{4\pi m_\text{e} f}{e g_\text{F}}
+    \label{eqn:lin}
+\end{equation*}
+
+\subsection{Quadratischer Zeeman-Effekt}
+
+\begin{equation}
+    U = g_\text{f}\mu_\text{B} B + g_\text{F}^2\mu_\text{B}^2 B^2 \frac{1-2 m_\text{F}}{\symup{\Delta}E_\text{Hy}}
+    \label{eqn:quad} 
+\end{equation}
+
+\subsection{Helmholtzspulen}
+
 \begin{equation}
     B = \mu_0 \frac{8IN}{\sqrt{125}R}\,.
     \label{eqn:helm}
 \end{equation}
+
