--- a/V21/content/diskussion.tex
+++ b/V21/content/diskussion.tex
@@ -43,3 +43,13 @@ Die Betrachtung des quadratischen Zeeman-Effektes, der um drei beziehungsweise 2
 Größenordnungen geringer ist als der lineare, zeigt, dass die getroffenen Näherungen
 hinreichend sind.
 
+\section{Literaturverzeichnis}
+
+[1] Roland Gersch, Fatma Kul, Tanja Striepling, Christian Stromenger. \textit{Optisches Pumpen am Rubidium.}
+
+\url{http://www.roland-gersch.de/labs/fprubidium.pdf} \\
+
+[2] TU Dortmund. Praktikumsanleitung. \textit{V21 - Optisches Pumpen.}
+
+\url{https://moodle.tu-dortmund.de/pluginfile.php/1136039/mod_resource/content/2/V21.pdf}.
+
