--- a/V47/content/auswertung.tex
+++ b/V47/content/auswertung.tex
@@ -2,7 +2,7 @@
 \label{sec:Auswertung}
 
 Aus den Messwerten wird zunächst die Molwärme für konstanten Druck $C_p$ errechnet. Anschließend wird diese in die Molwärme bei 
-konstanten Volumen $C_V$ umgerechnet. Aus den beiden Molwärmen wird die Debye-Temperatur $\theta_\text{D}$ bestimmt. Um diesen 
+konstanten Volumen $C_V$ umgerechnet. Aus den beiden Molwärmen wird die Debye-Temperatur $\theta_\text{D}$ bestimmt. Um diese 
 vergleichen zu können, wird ein theoretischer Wert für $\theta_\text{D}$ berechnet. 
 
 \subsection{Bestimmung von $C_p$ und $C_V$}
